# Fifa-Infantinoorg

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml
backend/: README.md  pyproject.toml  pytest.ini
backend/api/: index.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/config/: config.py
backend/app/database/: core.py
backend/app/features/accessibility/: routes.py
backend/app/features/crowd/: routes.py
backend/app/features/navigation/: routes.py
backend/app/features/sustainability/: routes.py
backend/app/features/volunteer/: routes.py
backend/app/providers/: firebase_provider.py  gemini_provider.py  google_maps_provider.py
backend/app/shared/api/: exceptions.py  handlers.py  models.py
backend/app/shared/dependencies/: core.py  db.py  factory.py  providers.py
backend/app/shared/infrastructure/: repository.py  service.py  transaction.py
backend/app/shared/logging/: formatter.py  logger.py  middleware.py  request_context.py
backend/app/shared/middleware/: security.py
backend/app/shared/providers/: ai.py  base.py  firebase.py  maps.py
backend/app/shared/utils/: datetime_utils.py  json.py  pagination_utils.py  validation_utils.py
backend/tests/: conftest.py  test_logging.py
backend/tests/api/: test_contracts.py
backend/tests/api/v1/: __init__.py  test_health.py  test_routers.py
backend/tests/config/: test_config.py
backend/tests/database/: test_core.py  test_database_integration.py
backend/tests/providers/: test_firebase.py  test_gemini.py  test_google_maps.py  test_providers.py
(+130 files in other folders)
