[project]
name = "infantinoorg-backend"
version = "0.1.0"
description = "InfantinoOrg Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "google-genai>=0.2.0",
    "googlemaps>=4.10.0",
    "firebase-admin>=6.5.0",
    "python-multipart>=0.0.32",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "coverage>=7.4.0",
    "ruff>=0.3.0",
    "black>=24.3.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]
